all media queries and the collapse block fixed

--- a/words-app.css
+++ b/words-app.css
@@ -94,11 +94,6 @@ header {
 
 
 
-
-
-
-
-
 #app-name {
 	font-size:2rem;
 	margin-bottom: 1rem;
@@ -110,20 +105,20 @@ header {
 }
 
 #intro-loader {
-	min-height: 6rem;
+	min-height: 12rem;
 	width: 100%;
+	border: 1px solid transparent;
 }
 #introduction {
-	width: 95%;
+	width: 90%;
 	text-align: center;
 	margin: auto;
 	margin-top: 1rem;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-
-	
+	font-size: 1.5rem;
+	height: auto;
 }
+
+
 
 
 #search-input {
@@ -159,7 +154,7 @@ header {
 
 .toggler {
 	margin-left: 1rem;
-	display:block;
+	display:none;
 }
 
 #search-container {
@@ -351,6 +346,11 @@ footer {
 		width: 80%;
 		margin: auto;
 	}
+	#intro-loader {
+		height:5rem;
+		width: 80%;
+		margin: auto;
+	}
 }
 
 @media (min-width:768px) {
@@ -384,14 +384,14 @@ footer {
 	}
 	#search-input {
 		width: 80%;
-		margin-top: 0.2rem;
+		margin-top: 0.3rem;
 	}
 	#search-btn {
 		height: 1.9rem;
-		margin-top: 0.3rem;
+		margin-top: 0.4rem;
 	}
 	#introduction {
-		width: 60%;
+		width: 70%;
 		font-size: 1.5rem;
 	}
 	#search-container {
@@ -399,14 +399,17 @@ footer {
 		margin: auto;
 		margin-top: 1rem;
 	}
+	#smooth-collapse-container {
+		top:0rem;
+	}
+	.toggler {
+		margin-left: 30%;
+	}
+	#full-word-block {
+		top:0rem;
+	}
 	#results-number {
-		justify-content: space-evenly;
-		width:40%;
-		margin: auto;
-		border-radius: 10px;
-		border:1px solid;
-		background-color:white;
-		color: black;
+		
 	}
 	#results-number:hover {
 		
@@ -417,6 +420,8 @@ footer {
 		font-weight: bold;
 		width:50%;
 		margin: auto;
+		top: -2rem;
+
 	}
 	#results-list-container li:hover {
 		text-decoration: underline;
